--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>{% block title %}{% endblock title %}</title>
-  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-</head>
-<body>
-  {% block content %}{% endblock content %}
-</body>
+  <head>
+    <title>{% block title %}{% endblock title %}</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+  </head>
+  <body>
+    {% block content %}{% endblock content %}
+  </body>
+  {% block scripts %}{% endblock scripts %}
 <html>
