Add broadcasting to the stream & some file guards.
Guard for non-existing file.
Change the stream event to broadcast.
Reorganize the server code.
Add 'use strict' to JS and refactor.

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -6,4 +6,11 @@
 
 {% block content %}
   <h4>Ohayou! What might you be doing here?</h4>
+  <div>
+    <h4>Do you want to:</h4>
+    <ul>
+      <li>generate some words <a href="/names">on click</a>?</li>
+      <li><a href="/generate">start</a> a word stream?</li>
+    </ul>
+  </div>
 {% endblock content %}
