--- a/server/templates/stream.html
+++ b/server/templates/stream.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
 {% block title %}
-  word, word, woooords!
+  generations
 {% endblock title %}
 
 {% block content %}
   <div style="margin-bottom: 20px">
-    <h4 onload="socketsss()"x>I found some names!</h4>
+    <h4 onload="socketsss()"x>I found some names! I can give you more names. A stream of names!</h4>
     <a href="/static/log" download><button>wanna grab them?</button></a>
-    <button onclick="generateNames()">start generating</button>
+    <button id="generate">start generating</button>
   </div>
   <div id="names">
   {% for word in log_data %}
@@ -22,23 +22,26 @@
 {% block scripts %}
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
   <script type="text/javascript" charset="utf-8">
+    {# 'use strict'; #}
+
     document.addEventListener('DOMContentLoaded', function() {
-      var socket = io.connect('http://' + document.domain + ':' + location.port + '/generate');
+      const socket = io.connect('http://' + document.domain + ':' + location.port + '/generate');
+      const btn    = document.getElementById('generate');
+      const theDiv = document.getElementById('names');
 
       socket.on('connect', function() {
         console.log('are you still in?')
         socket.emit('my event', { data: 'I\'m connected!' });
       });
 
-      generateNames = function() {
+      btn.onclick = function() {
         console.log('clicked!');
         socket.emit('generate stream', { data: 'names please!' });
       }
 
       socket.on('generated name', function(msg) {
         console.log(msg.data);
-        var theDiv = document.getElementById("names");
-        theDiv.innerHTML += msg.data + " -> "; 
+        theDiv.innerHTML += msg.data + ' -> '; 
       });
     });
   </script>
