--- a/server/templates/words.html
+++ b/server/templates/words.html
@@ -6,9 +6,9 @@
 
 {% block content %}
   <div style="margin-bottom: 20px">
-    <h4 onload="socketsss()"x>I found some names!</h4>
+    <h4 onload="socketsss()"x>I found some names! I can give you more names.</h4>
     <a href="/static/log" download><button>wanna grab them?</button></a>
-    <button onclick="getName()">generate a name</button>
+    <button id="getname">generate a name</button>
   </div>
   <div id="names">
   {% for word in log_data %}
@@ -22,23 +22,26 @@
 {% block scripts %}
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
   <script type="text/javascript" charset="utf-8">
+    'use strict';
+    
     document.addEventListener('DOMContentLoaded', function() {
-      var socket = io.connect('http://' + document.domain + ':' + location.port + '/names');
+      const socket = io.connect('http://' + document.domain + ':' + location.port + '/names');
+      const btn    = document.getElementById('getname');
+      const theDiv = document.getElementById('names');
 
       socket.on('connect', function() {
         console.log('are you still in?')
         socket.emit('my event', { data: 'I\'m connected!' });
       });
 
-      getName = function() {
+      btn.onclick = function() {
         console.log('click!');
         socket.emit('getname', { data: 'gimme a name!' });
       }
 
       socket.on('name', function(msg) {
         console.log(msg.data);
-        var theDiv = document.getElementById("names");
-        theDiv.innerHTML += msg.data + " -> "; 
+        theDiv.innerHTML += msg.data + ' -> '; 
       });
     });
   </script>
