Add sending clicks from canvas.
Refactor server: organize name generation, add generic functions for logging events.
Add a new template for clicks.
Rename the template for words.
Add new logs to .gitignore.
Update README.md.

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -11,6 +11,7 @@
     <ul>
       <li>generate some words <a href="/names">on click</a>?</li>
       <li><a href="/generate">start</a> a word stream?</li>
+      <li>draw some <a href="/clicks">pixels</a>?</li>
     </ul>
   </div>
 {% endblock content %}
