Add drawing lines on the canvas.
Add a new template for drawings.
Allow for drawing continuous black lines and save them to a log.
Add relevant code in the server backend.
Update README.md.
Fix an artifact typo in stream.html.

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -12,6 +12,7 @@
       <li>generate some words <a href="/names">on click</a>?</li>
       <li><a href="/generate">start</a> a word stream?</li>
       <li>draw some <a href="/clicks">pixels</a>?</li>
+      <li>draw some <a href="/draw">lines</a>?</li>
     </ul>
   </div>
 {% endblock content %}
