--- a/server/templates/stream.html
+++ b/server/templates/stream.html
@@ -22,7 +22,7 @@
 {% block scripts %}
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
   <script type="text/javascript" charset="utf-8">
-    {# 'use strict'; #}
+    'use strict';
 
     document.addEventListener('DOMContentLoaded', function() {
       const socket = io.connect('http://' + document.domain + ':' + location.port + '/generate');
