Pairing session: add different colors for sessions.
Add session handling to the backend.
Add a list of colors and use them for the sessions.
Adjust the drawing behavior to change stroke color based on log.
Add window reloading after deleting the log.

--- a/server/templates/clicks.html
+++ b/server/templates/clicks.html
@@ -30,12 +30,13 @@
       clear.addEventListener('click', function(e) {
         console.log('clear!');
         socket.emit('clear clicks', { data: 'Clear clicked! '});
+        window.location.reload();
       });
       
       let drawDots = function() {
         let data = {{ log_data|safe }};
         data.forEach(function(point) {
-          point = point.split(':').map(x => +x)
+          point = point.split(':').map(x => +x);
           ctx.fillRect(point[0], point[1], 5, 5);
         });
       }
